fix nowrap, revert viewport bug

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -45,7 +45,7 @@ svg.squiggle {
 }
 
 svg.squiggle path {
-  stroke-width: 10vw;
+  stroke-width: 1.8em;
   stroke: var(--c5);
 }
 
@@ -56,10 +56,10 @@ svg.squiggle path {
 }
 
 h1 {
-  font-size: 5vw;
+  font-size: 2em;
 }
 p {
-  font-size: 1.111vw;
+  font-size: 1em;
 }
 
 section.grid-container {
@@ -73,7 +73,7 @@ section.grid-container > :last-child {
   height: max-content
 }
 .title {
-  font-size: 3.667vw;
+  font-size: 3.3em;
 }
 
 .hidden {
@@ -81,13 +81,13 @@ section.grid-container > :last-child {
 }
 
 .grid-c {
-  padding-top: 1.11vw;
+  padding-top: 1em;
 }
 
 .grid-item {
   display: flex;
   flex-direction: column;
-  padding: 0.556vw;
+  padding: 0.5em;
   box-sizing: border-box;
 }
 
